<resources>
    <string name="app_name">Clubs</string>
    <string name="app_logo_description">App icon logo</string>
    <string name="title_home">Home</string>
    <string name="title_clubs">Clubs</string>
    <string name="title_user">User</string>
    <string name="nav_bar_home">Home</string>
    <string name="nav_bar_clubs">Clubs</string>
    <string name="nav_bar_user">User</string>
    <string name="login_with_google">Sign in with Google</string>
    <string name="logout_text">Logout</string>
    <string name="message_beaming_complete">Beaming complete</string>
    <string name="hint_your_message">Your message</string>
    <string name="label_your_message">NFC VERIFICATION</string>
    <string name="title_btn_set">is a member of</string>
    <string name="ReceiverButton">VERIFY</string>
    <!--Runtime Permission-->
    <string name="show_camera">Show camera preview</string>
    <string name="camera_unavailable"><b>Camera could not be opened.</b>\nThis occurs when the camera is not available (for example it is already in use) or if the system has denied access (for example when camera access has been disabled).</string>
    <string name="intro">This sample shows a basic implementation for requesting permissions at runtime.\nClick the button below to request the Camera permission and open a full-screen camera preview.</string>
    <string name="open_camera_preview">Open Camera Preview</string>
    <string name="intro_message">HI</string>
    <string name="error">Image</string>
    <string name="NfcButton">NFC</string>
    <string name="camera_access_required">Camera access is required to display the camera preview.</string>
    <string name="ok">OK</string>
    <string name="camera_permission_not_available">Permission is not available. Requesting camera permission.</string>
    <string name="camera_permission_available">Camera permission is available. Starting preview.</string>
    <string name="camera_permission_granted">Camera permission was granted. Starting preview.</string>
    <string name="camera_permission_denied">Camera permission request was denied.</string>
    <string name="user_settings_TnC">Terms and Conditions</string>
    <string name="user_settings_DA">Delete Account</string>
    <string name="user_settings_SO">Sign Out</string>
    <string name="create_club">Create Club</string>
    <string name="club_name">Club Name</string>
    <string name="club_desc">Club Description</string>
    <string name="cancel">Cancel</string>
    <string name="clubDetails">Loading club details...</string>
    <string name="public_club">Public Club?</string>
    <string name="upload_image">Choose Club Logo</string>
    <string name="clubs">Clubs</string>
    <string name="clubName">Club Name :</string>
    <string name="clubId">Club Id :</string>
    <string name="userId">User Id :</string>
    <string name="userName">User Name :</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="continue_text">Continue</string>
    <string name="my_clubs">My Clubs</string>
    <string name="title_activity_verification">VerificationActivity</string>
    <string name="listview_row_text">Row Text</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="validate_qr">Validate user with QR</string>
    <string name="validate_nfc">NFC validation</string>
    <string name="action_generate_qr">Club\'s QR</string>
    <string name="action_manage">Manage</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="edit">Edit</string>
    <string name="disband_club">Disband Club</string>
    <string name="title_activity_verify_message">VerifyMessageActivity</string>
    <string name="is_a_member">User is a member</string>
    <string name="unAuth">Invalid action!</string>
    <string name="view_members">View members</string>
    <string name="title_activity_view_club">Club Details</string>
    <string name="tut_str1">START</string>
    <string name="tut_str2">NEXT</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="tutorial_case_image">tutorial case image</string>
    <string name="remove_case">Remove Case</string>
    <string name="remove_mobile_case">Remove the device case</string>
    <string name="back_to_back">Back to Back</string>
    <string name="keep_mobile_back_to_back">Bring the devices back to back  and wait for a few seconds</string>
    <string name="slide_device">Slide Device</string>
    <string name="slide_device_up_and_down_for_the_nfc_chip_to_get_detected">Slide the device up and down for the NFC chip to get detected. Once detected you will hear a tone</string>
    <string name="tap_on_screen">Tap on Screen</string>
    <string name="let_the_club_member_tap_on_the_screen_to_validate">Now you will see a visual of a device on your screen. Tap on the visual for the club owner to validate your membership</string>
    <string name="user_profile_pic_in_nfc_activity">user profile pic in nfc activity</string>
    <string name="club_profile_pic_in_nfc_activity">club profile pic in nfc activity</string>
    <string name="create_event">Create Event</string>
    <string name="create_an_event">Create an Event</string>
    <string name="click_to_select_date">Click to select a date</string>
    <string name="title_activity_view_event">Details of Event</string>
    <string name="eventDetails">Loading event details...</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="user_name_image">user name Image</string>
    <string name="user_image">user image</string>
    <string name="club_image">club image</string>
    <string name="are_you_a_member">ARE YOU A MEMBER OF THE CLUB</string>
    <string name="question_mark">\?</string>
    <string name="statement">Statement</string>
    <string name="membership">VERIFY YOUR CLUB MEMBERSHIP</string>
    <string name="invalid_nfc_action">Invalid NFC action</string>
    <string name="go_back">Go Back</string>
    <string name="try_nfc_again">Try NFC the other way around again</string>
    <string name="follow_the_tutorial">Follow this tutorial to validate your membership when you enter a club.</string>
    <string name="details_of_event">Details of Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="member_title">Members</string>
    <string name="manage_title">Manage</string>
    <string name="add_to_calender">Add to Calender</string>
</resources>