<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kitkat.group.clubs.clubs.ViewClubActivity" >

    <item
        android:id="@+id/action_view_members"
        android:orderInCategory="100"
        android:title="@string/view_members"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_generate_qr"
        android:orderInCategory="100"
        android:title="@string/action_generate_qr"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_scan_qr"
        android:orderInCategory="100"
        android:title="@string/validate_qr"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_nfc"
        android:orderInCategory="100"
        android:title="@string/validate_nfc"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_manage"
        android:orderInCategory="100"
        android:title="@string/action_manage"
        app:showAsAction="never" />

</menu>
