<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#7323dc">

    <ImageView
        android:contentDescription="@string/tutorial_case_image"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:src="@drawable/tutorial_touch"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tap_on_screen"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/let_the_club_member_tap_on_the_screen_to_validate"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"/>

</LinearLayout>