<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/circular_corners_right"
    android:orientation="vertical"
    android:paddingTop="10dp" >

    <Button
        android:id="@+id/btn_user_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_settings_TnC"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:background="@null" />

    <Button
        android:id="@+id/change_profile_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_profile_picture"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:background="@null" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="logout"
        android:text="@string/user_settings_SO"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:background="@null" />

</LinearLayout>