<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kitkat.group.clubs.clubs.events.CreateEventActivity">

    <RelativeLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary" >

        <TextView
            android:id="@+id/banner_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/create_event"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorWhite"
            android:textSize="34sp" />

    </RelativeLayout>

    <EditText
        android:layout_below="@+id/banner"
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/event_name"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_below="@id/event_name"
        android:id="@+id/select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_select_date"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_below="@+id/select_date"
        android:id="@+id/event_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:ems="10"
        android:hint="@string/event_description"
        android:inputType="textLongMessage"
        android:gravity="bottom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp" />

    <Button
        android:id="@+id/btn_create_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createEvent"
        android:text="@string/create_event"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goBack"
        android:text="@string/cancel"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp" />

</RelativeLayout>
